<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".main.KinoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="6dp"
            android:text="@string/main_title"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/space_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@color/space_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_title" />

        <TextView
            android:id="@+id/main_title_vreme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/title_vreme"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/main_title"
            app:layout_constraintTop_toBottomOf="@+id/space_line" />

        <TextView
            android:id="@+id/main_title_preostalo_vreme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/title_preostalo_vreme"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/main_title_vreme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_title_vreme" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_top_layout"
        app:layout_constraintStart_toStartOf="@+id/main_top_layout"
        app:layout_constraintTop_toBottomOf="@+id/main_top_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>