<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".talon.ui.TalonActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_top_talon_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_title_talon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@color/grey"
            android:padding="6dp"
            android:text="@string/main_title_talon"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/preostalo_vreme_talon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:padding="6dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/main_title_talon"
            app:layout_constraintTop_toBottomOf="@+id/main_title_talon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/layout_kvota"
        layout="@layout/layout_kvota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_top_talon_layout" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_uzivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:backgroundTint="#1E93E8"
        android:text="@string/izvlacenje_uzivo"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_kvota" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_slucajno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="#1E93E8"
        android:text="@string/slucajni_odbir"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_uzivo" />

    <TextView
        android:id="@+id/text_broj_loptica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button_slucajno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_slucajno" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/talon_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_slucajno" />


</androidx.constraintlayout.widget.ConstraintLayout>